# spellchecker

./: .gitignore  CMakeLists.txt  GTest.cmake  class-diagram.puml  english.cpp  english.h  language.h  language_list.cpp  language_list.h  main.cpp  mock_rule.h  rule.h  russian.cpp  russian.h  test_language.cpp
english/: english.cpp  english.h  keep_letter_e.cpp  keep_letter_e.h  test_english.cpp
russian/: russian.cpp  russian.h  test_russian.cpp  vowel_after_sizzling.cpp  vowel_after_sizzling.h
